feat: migrate to JD.MSBuild.Fluent v0.2.0 with automatic MSBuild file generation
- Add JD.MSBuild.Containers.Definition project with fluent DSL definitions
- Configure automatic generation using JD.MSBuild.Fluent build integration
- Update gitignore to exclude generated MSBuild files (buildTransitive/)
- Add jdmsbuild CLI tool to dotnet-tools.json for CI/CD
- Simplify build process - no custom targets required by consumers

The Definition project uses JD.MSBuild.Fluent's turnkey automatic generation:
- Set JDMSBuildFluentDefinitionType property
- Set JDMSBuildFluentOutputPath property
- MSBuild files generate automatically on build

This provides a maintainable, strongly-typed approach to MSBuild package authoring.

--- a/.gitignore
+++ b/.gitignore
@@ -417,3 +417,7 @@ docs/obj/
 
 # Sample artifacts
 samples/**/data/
+
+# Generated MSBuild files (regenerated from JD.MSBuild.Fluent definition)
+src/JD.MSBuild.Containers/buildTransitive/JD.MSBuild.Containers.props
+src/JD.MSBuild.Containers/buildTransitive/JD.MSBuild.Containers.targets
