--- a/src/JD.MSBuild.Containers.Definition/JD.MSBuild.Containers.Definition.csproj
+++ b/src/JD.MSBuild.Containers.Definition/JD.MSBuild.Containers.Definition.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
+    <!-- Disable automatic generation to avoid assembly loading conflicts in CI -->
+    <JDMSBuildFluentGenerateEnabled>false</JDMSBuildFluentGenerateEnabled>
   </PropertyGroup>
 
   <ItemGroup>
