fix: make Definition project non-packable and remove Build from pack target
- Set IsPackable=false on Definition project (build-time only)
- Remove MSBuild Build call from CopyGeneratedMSBuildFiles (already built)
- Fixes NU5039 readme error and NETSDK1085 NoBuild conflict

--- a/src/JD.MSBuild.Containers.Definition/JD.MSBuild.Containers.Definition.csproj
+++ b/src/JD.MSBuild.Containers.Definition/JD.MSBuild.Containers.Definition.csproj
@@ -5,6 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     
+    <!-- This is a build-time only project, not a distributable package -->
+    <IsPackable>false</IsPackable>
+    
     <!-- Disable automatic generation to avoid assembly loading conflicts in CI -->
     <JDMSBuildFluentGenerateEnabled>false</JDMSBuildFluentGenerateEnabled>
   </PropertyGroup>
