--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,9 +49,9 @@ jobs:
             --configuration Release \
             --no-build \
             --collect:"XPlat Code Coverage" \
-            -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=cobertura \
-            -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Include="[JD.MSBuild.Containers*]*" \
-            -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Exclude="[*Tests]*"
+            --settings codecov.runsettings \
+            --results-directory ./TestResults \
+            --logger "trx;LogFileName=test-results.trx"
 
       - name: Install ReportGenerator
         run: dotnet tool update -g dotnet-reportgenerator-globaltool
@@ -94,8 +94,7 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-          files: |
-            **/TestResults/*/coverage.cobertura.xml
+          files: ./TestResults/**/coverage.cobertura.xml
           flags: unittests
           fail_ci_if_error: true
           verbose: true
@@ -162,9 +161,9 @@ jobs:
             --configuration Release \
             --no-build \
             --collect:"XPlat Code Coverage" \
-            -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=cobertura \
-            -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Include="[JD.MSBuild.Containers*]*" \
-            -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Exclude="[*Tests]*"
+            --settings codecov.runsettings \
+            --results-directory ./TestResults \
+            --logger "trx;LogFileName=test-results.trx"
 
       - name: Pack (all packable projects)
         run: >
@@ -216,8 +215,7 @@ jobs:
       - name: Upload coverage to Codecov (Release)
         uses: codecov/codecov-action@v4
         with:
-          files: |
-            **/TestResults/*/coverage.cobertura.xml
+          files: ./TestResults/**/coverage.cobertura.xml
           flags: unittests
           fail_ci_if_error: false
           verbose: true
