--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,6 +98,7 @@ jobs:
           flags: unittests
           fail_ci_if_error: true
           verbose: true
+          disable_search: true
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
@@ -219,6 +220,7 @@ jobs:
           flags: unittests
           fail_ci_if_error: false
           verbose: true
+          disable_search: true
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
